package InstrumentoCuerda;

public class Arpa {
    public Arpa() {
        //Constructor arpa
    }
}
