package InstrumentoCuerda;

public class Bajo {
    public Bajo() {
        //Constructor bajo
    }
}
