package InstrumentoViento;

public class Clarinete {
    public Clarinete() {
        //Constructor clarinete
    }
}
