package InstrumentoViento;

public class Trompeta {
    public Trompeta() {
        //Constructor trompeta
    }
}
